--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="anishapo celery личное взаимнаязабота">
-    <meta name="keywords" content="anishapo celery личное взаимнаязабота" />
+    <meta name="description" content="anishapo celery взаимнаязабота">
+    <meta name="keywords" content="anishapo celery взаимнаязабота" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="anishapo celery личное взаимнаязабота" />
+    <meta property="og:description" content="anishapo celery взаимнаязабота" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -99,14 +99,6 @@
 									</a>
 								</div>
 							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="anishapo личное">
-									<a href="./tags/./anishapo-lichnoe.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-lichnoe.png);"></div>
-										<div class="stories__slide-txt" style="">anishapo личное</div>
-									</a>
-								</div>
-							</div>
 						</div>
 					</div>
 					<div class="stories__arrow stories__arrow--prev" id="js-stories-prev"></div>
@@ -140,12 +132,22 @@
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
+								<a href="./posts/./eto-navsegda-izmenit-vashu-zhizn-xxxxx.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1815</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=H1CFvtWMxLMAX-XyyfP&oh=b4ae4aea7662bad151394cdcb60a1434&oe=5E8CE3AD" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
+									</div>
+									<div class="article-more__item-name" style="
+">ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉</div>
+								</a>
 								<a href="./posts/./kak-spravit-sya-so-streptokokkom.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1630</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1638</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=Kd0LurpxGJIAX9_8pt_&oh=f4fd17af6d86989d0aa4973e93b7f0c2&oe=5E8975A6" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=d-sutmXvU4YAX_gG0pU&oh=b3cc3f1129104c5eea5656d08dd1d5bf&oe=5E8975A6" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
 									</div>
 									<div class="article-more__item-name" style="
 ">КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ</div>
@@ -153,29 +155,19 @@
 								<a href="./posts/./zernovyex-fasol-x-chechevitsa-1.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1437</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1450</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=zTUAhUgVfZIAX9uO1sd&oh=d3b40c55031cad59cdff98b930eadd3b&oe=5E83C340" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=D-tfINa2l9oAX_3NJ6s&oh=bd44e58df32cd162a7312b5bcf45dcd5&oe=5E83C340" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 									</div>
 									<div class="article-more__item-name" style="
 ">ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,</div>
 								</a>
-								<a href="./posts/./kak-podnyat--vitamin-d.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1376</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=AvSPqQhV6iYAX9Kpcxh&oh=6a78dfd7bc0f8ddf765623d299228a17&oe=5E78EA84" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
-									</div>
-									<div class="article-more__item-name" style="
-">КАК ПОДНЯТЬ ВИТАМИН Д?</div>
-								</a>
 								<a href="./posts/./superbakteriya-streptokokk.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1310</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1311</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=r4oLgtl6j1kAX-SPbWe&oh=91d73f20ea31fe253e672f4d13d7848a&oe=5E820A24" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=G2c9wTf27E0AX_9IDLg&oh=6c1a19ac1a551279ceed5c014588ee71&oe=5E820A24" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
 									</div>
 									<div class="article-more__item-name" style="
 ">СУПЕРБАКТЕРИЯ СТРЕПТОКОКК</div>
@@ -183,9 +175,9 @@
 								<a href="./posts/./klubnichno-bananovyy-khleb-xx-xx--bez-glyutenax-bez-moloka.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1139</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1146</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tuz6u1_eVEMAX-hBSPu&oh=6d2061db6b25a159ea5a3153b19c39dd&oe=5E8A0842" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=nh-CpUgD8vgAX_VCqOH&oh=cfdb55648224c80324e3b5fa454374a9&oe=5E8A0842" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
 									</div>
 									<div class="article-more__item-name" style="
 ">КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,</div>
@@ -193,32 +185,32 @@
 								<a href="./posts/./pishchevye-drozhzhi-x-nutritional.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1033</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1049</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84347677_2665354757084113_8900968863076313356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=wqj0lKYV90sAX9s-p6D&oh=8fa4820497b72bbbf2ce69463791bbf2&oe=5E790615" alt="ПИЩЕВЫЕ ДРОЖЖИ / NUTRITIONAL">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84347677_2665354757084113_8900968863076313356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=wqj0lKYV90sAX9s-p6D&oh=c41828235073bed5e127907115a2f245&oe=5E863515" alt="ПИЩЕВЫЕ ДРОЖЖИ / NUTRITIONAL">
 									</div>
 									<div class="article-more__item-name" style="
 ">ПИЩЕВЫЕ ДРОЖЖИ / NUTRITIONAL</div>
 								</a>
-								<a href="./posts/./zhivaya-vodaxxx.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>959</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Ari6AXGGdCwAX8raqMU&oh=bf007ea9c08d0c065e92699f1b2c94fd&oe=5E79C23F" alt="ЖИВАЯ ВОДА ☔️">
-									</div>
-									<div class="article-more__item-name" style="
-">ЖИВАЯ ВОДА ☔️</div>
-								</a>
 								<a href="./posts/./zernovyex-fasol-x-chechevitsa.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>949</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>986</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=rSaO4_4bcz4AX_jBlkz&oh=2c0ca2accc8dffedd9f3ae9ab82b4287&oe=5E7A07A6" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=b_TpYt8MsagAX9tEBLJ&oh=766353a0f60af4dd2425449b521892a0&oe=5E8736A6" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 									</div>
 									<div class="article-more__item-name" style="
 ">ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,</div>
+								</a>
+								<a href="./posts/./malo-kto-znaet-i-dogadyvaetsyax-chto-nezdorovaya.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>971</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=POQs6ng7PwsAX-AV12F&oh=61f7a2a2118970bc8bb795e018eabf07&oe=5E8327AF" alt="Мало кто знает и догадывается, что нездоровая">
+									</div>
+									<div class="article-more__item-name" style="
+">Мало кто знает и догадывается, что нездоровая</div>
 								</a>
 							</div>
 						</div>
