--- a/stories.html
+++ b/stories.html
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="prakticheskie-shagi-dlya-vosstanovleniya-pechenixxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88135693_664660584281351_4357996011551376848_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=1PdDznSlpPsAX_uJ3a9&oh=ee48cef47fc7506b915dade621ebe5f1&oe=5E8BE039" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПРАКТИЧЕСКИЕ ШАГИ ДЛЯ ВОССТАНОВЛЕНИЯ ПЕЧЕНИ 💫">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="eto-navsegda-izmenit-vashu-zhizn-xxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Rj2U2ysA1ZIAX9V-1Lc&oh=0294931ab3a68ea862aa3eaebcecb967&oe=5E8CE3AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=3leKvPxgRCEAX8u4UVr&oh=f509dd722e75ad26a9dc7cb7a5abd68c&oe=5E8CE3AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="malo-kto-znaet-i-dogadyvaetsyax-chto-nezdorovaya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=VwiBrGcuPPUAX_Y9Irl&oh=3396db325ff8a49b058c6155d27a1f86&oe=5E8327AF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Мало кто знает и догадывается, что нездоровая">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=SIBCTmn81YoAX-wG64i&oh=75fc86c11157cf00ae84c7805e969343&oe=5E8327AF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Мало кто знает и догадывается, что нездоровая">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zernovyex-fasol-x-chechevitsa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=3BZfauqdx2QAX-VHukG&oh=0c71ecf71aaac62662c93a7a7d33c335&oe=5E8736A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=6iQFDeZGIpQAX8cFAal&oh=5dd4f68c6e331d80c965cd7573867b13&oe=5E8736A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zernovyex-fasol-x-chechevitsa-1" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=cmIGl_NfSf0AX_GdULO&oh=f851425fd8d2e7442b91e14304e90acc&oe=5E83C340" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=C9Pz-e_n4vgAX-tIA0Y&oh=bc075bd0107479f4907403184789b658&oe=5E83C340" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bananovyy-fosterxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=b0MK_LkW36gAX9K5_X7&oh=828e32dbf5b0382a766cd7b40a016249&oe=5E5949B6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=b0MK_LkW36gAX9K5_X7&oh=07cdd74590f3f73d4042aae81993d4de&oe=5E5A9B36" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="klubnichno-bananovyy-khleb-xx-xx--bez-glyutenax-bez-moloka" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=wjYgzNdb_u8AX87bIJP&oh=bf32b898f8a6c8788523e9a4eab6a667&oe=5E8A0842" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=8r9hnf_WH04AX9bR9p0&oh=73a58f5b0aa030ca6c1c3cfcc971fcd6&oe=5E8A0842" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shchadyashchee-ochishchenie-pecheni" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=ppDJDcfy8wMAX9G_3M1&oh=7d064598c459973446b21a0db6e50d9a&oe=5E828FB2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wFMSzZuqTTkAX_KExVd&oh=33ecd80b841fd3a7ff4bfa0cf0f4e60c&oe=5E828FB2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="superbakteriya-streptokokk" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=d5bcq_BRGFAAX-RqoWW&oh=597aa10806e68b2966de854d96565016&oe=5E820A24" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Dawpe2DavUAAX_zhQ7o&oh=87d14c90055424e23df6122aeb69bb89&oe=5E820A24" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhivaya-vodaxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Nqtk3A_SMrsAX8c3q1f&oh=d7b4bcf642d780aa77852256bd402b46&oe=5E86F13F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=vdr0fa091hsAX8RT33Z&oh=1ce676b00e6e60a3bc4a275b9ec97288&oe=5E86F13F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="3-sostavlyayushchie-antivirusnogo-pitaniyaxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=moEXgbbUJBwAX_qehTF&oh=2c354dab9e3fd3457afbfcb51cf2f351&oe=5E84B0F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=0CiQ9W_fBuUAX-FdOo1&oh=ff484123fcb2f429eef9ed8ab8820833&oe=5E84B0F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="chto-zhe-bylo-s-moey-kozhey" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=4eToFVXL_OgAX_GzeV8&oh=f67145c46b0837afa96cbf6e3f8110ce&oe=5E86C8D8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriyaxxxxx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=uzH3Pk3_F58AX_fR2ym&oh=d51151c240e46bfd6be532e77c5b3208&oe=5E8358D7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
