--- a/error.html
+++ b/error.html
@@ -86,16 +86,16 @@
 							<a href="./posts/./eto-navsegda-izmenit-vashu-zhizn-xxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>2199</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>2209</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Rj2U2ysA1ZIAX9V-1Lc&oh=0294931ab3a68ea862aa3eaebcecb967&oe=5E8CE3AD" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/85176628_1215603168649987_4407983276721146727_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=3leKvPxgRCEAX8u4UVr&oh=f509dd722e75ad26a9dc7cb7a5abd68c&oe=5E8CE3AD" alt="ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉">
 							</div>
 							<div class="article-more__item-name">ЭТО НАВСЕГДА ИЗМЕНИТ ВАШУ ЖИЗНЬ 🌱🎉</div>
 						</a>
 							<a href="./posts/./kak-spravit-sya-so-streptokokkom.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1648</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1651</span>
 								</div>
 								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=zBZpa4mQZLkAX-fqIT0&oh=9ca9ae20d48a414aa998aead15215b18&oe=5E8975A6" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
 							</div>
@@ -104,34 +104,25 @@
 							<a href="./posts/./zernovyex-fasol-x-chechevitsa-1.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1462</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1466</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=cmIGl_NfSf0AX_GdULO&oh=f851425fd8d2e7442b91e14304e90acc&oe=5E83C340" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=C9Pz-e_n4vgAX-tIA0Y&oh=bc075bd0107479f4907403184789b658&oe=5E83C340" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 							</div>
 							<div class="article-more__item-name">ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,</div>
-						</a>
-							<a href="./posts/./superbakteriya-streptokokk.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1317</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=d5bcq_BRGFAAX-RqoWW&oh=597aa10806e68b2966de854d96565016&oe=5E820A24" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
-							</div>
-							<div class="article-more__item-name">СУПЕРБАКТЕРИЯ СТРЕПТОКОКК</div>
 						</a>
 							<a href="./posts/./klubnichno-bananovyy-khleb-xx-xx--bez-glyutenax-bez-moloka.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1160</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1163</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=wjYgzNdb_u8AX87bIJP&oh=bf32b898f8a6c8788523e9a4eab6a667&oe=5E8A0842" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=8r9hnf_WH04AX9bR9p0&oh=73a58f5b0aa030ca6c1c3cfcc971fcd6&oe=5E8A0842" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
 							</div>
 							<div class="article-more__item-name">КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,</div>
 						</a>
 							<a href="./posts/./pishchevye-drozhzhi-x-nutritional.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1073</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1077</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84347677_2665354757084113_8900968863076313356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=HU2IIgVmDSQAX_wFskv&oh=e1e808e74e24949f8b8699de14de4d9a&oe=5E863515" alt="ПИЩЕВЫЕ ДРОЖЖИ / NUTRITIONAL">
 							</div>
@@ -140,20 +131,29 @@
 							<a href="./posts/./malo-kto-znaet-i-dogadyvaetsyax-chto-nezdorovaya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1022</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1028</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=VwiBrGcuPPUAX_Y9Irl&oh=3396db325ff8a49b058c6155d27a1f86&oe=5E8327AF" alt="Мало кто знает и догадывается, что нездоровая">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84352737_495134488045619_7903098250688137072_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=SIBCTmn81YoAX-wG64i&oh=75fc86c11157cf00ae84c7805e969343&oe=5E8327AF" alt="Мало кто знает и догадывается, что нездоровая">
 							</div>
 							<div class="article-more__item-name">Мало кто знает и догадывается, что нездоровая</div>
 						</a>
 							<a href="./posts/./zernovyex-fasol-x-chechevitsa.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1003</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1008</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=3BZfauqdx2QAX-VHukG&oh=0c71ecf71aaac62662c93a7a7d33c335&oe=5E8736A6" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=6iQFDeZGIpQAX8cFAal&oh=5dd4f68c6e331d80c965cd7573867b13&oe=5E8736A6" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 							</div>
 							<div class="article-more__item-name">ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,</div>
+						</a>
+							<a href="./posts/./shchadyashchee-ochishchenie-pecheni.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>871</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wFMSzZuqTTkAX_KExVd&oh=33ecd80b841fd3a7ff4bfa0cf0f4e60c&oe=5E828FB2" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
+							</div>
+							<div class="article-more__item-name">ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ</div>
 						</a>
 						</div>
 				</div>
